# sourcepp

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  FUTURE.md  LICENSE  README.md  SECURITY.md  THIRDPARTY_LEGAL_NOTICES.txt  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_000000_000020.html  dir_000000_000022.html  dir_000000_000033.html  dir_000001_000002.html  dir_000001_000007.html  dir_000001_000008.html  dir_000001_000009.html  dir_000001_000013.html  dir_000001_000017.html  dir_000002_000007.html  dir_000002_000008.html  dir_000002_000009.html  dir_000003_000007.html  dir_000003_000009.html  dir_000003_000022.html  dir_000004_000007.html  dir_000004_000009.html  dir_000004_000017.html  dir_000005_000006.html  dir_000005_000007.html  dir_000005_000008.html  dir_000005_000009.html  (+735 more)
.github/: dependabot.yml
.github/workflows/: build.yml  deploy_docs.yml  docs.yml  release.yml  wheels.yml
bench/: _bench.cmake  _bench.py  kvpp.cmake  kvpp.cpp  kvpp.py  vtfpp.cpp  vtfpp.py
branding/src/: logo.blend  logo.pdn
cmake/: AddPrettyParser.cmake  AddRemoteLibrary.cmake  AddSourcePPLibrary.cmake  IncludeSubdirectory.cmake  PrintOptions.cmake  TargetLinkCompressonator.cmake  TargetOptimize.cmake
cmake_scripts/: AddPrettyParser.cmake
d0/d02/: structsndpp_1_1WAV_1_1ChunkJUNK.html  structsndpp_1_1WAV_1_1ChunkJUNK.js
d0/d03/: structvpkpp_1_1VPK_1_1Header2__coll__graph.map  structvpkpp_1_1VPK_1_1Header2__coll__graph.md5
d0/d0a/: EntityLump_8cpp.html  EntityLump_8cpp_source.html
d0/d14/: ORE_8cpp.html  ORE_8cpp_source.html
d0/d15/: structvtfpp_1_1ImagePixel_1_1BGRX8888.html  structvtfpp_1_1ImagePixel_1_1BGRX8888.js
d0/d17/: namespacevcryptpp_1_1VICE_1_1KnownCodes.html
d0/d1c/: structvtfpp_1_1ImagePixel_1_1BGRA4444.html  structvtfpp_1_1ImagePixel_1_1BGRA4444.js
d0/d21/: structvpkpp_1_1GCF_1_1DirectoryHeader.html  structvpkpp_1_1GCF_1_1DirectoryHeader.js
d0/d22/: HOT_8cpp__incl.map  HOT_8cpp__incl.md5
d0/d24/: classtoolpp_1_1FGDWriter_1_1EntityWriter_1_1KeyValueFlagsWriter-members.html  structsndpp_1_1WAV_1_1ChunkPAD__inherit__graph.map  structsndpp_1_1WAV_1_1ChunkPAD__inherit__graph.md5  structvtfpp_1_1ImagePixel_1_1RGB888.html  structvtfpp_1_1ImagePixel_1_1RGB888.js
d0/d27/: structfgdpp_1_1FGD_1_1Entity_1_1FieldFlags_1_1Flag.html  structfgdpp_1_1FGD_1_1Entity_1_1FieldFlags_1_1Flag.js
d0/d2d/: classsteampp_1_1Steam-members.html
d0/d30/: structvtfpp_1_1HOT_1_1Rect-members.html
d0/d33/: vcryptpp_8h.html  vcryptpp_8h_source.html
d0/d36/: structvpkpp_1_1GCF_1_1DirectoryEntry2-members.html
d0/d3b/: classfgdpp_1_1FGDWriter_1_1EntityWriter_1_1KeyValueFlagsWriter.html  classfgdpp_1_1FGDWriter_1_1EntityWriter_1_1KeyValueFlagsWriter.js
d0/d3f/: classvpkpp_1_1HOG__inherit__graph.map  classvpkpp_1_1HOG__inherit__graph.md5
d0/d4d/: structmdlpp_1_1VVD_1_1Fixup.html  structmdlpp_1_1VVD_1_1Fixup.js
d0/d51/: SHT_8h.html  SHT_8h.js  SHT_8h_source.html
d0/d53/: MathExtended_8h__dep__incl.map  MathExtended_8h__dep__incl.md5
d0/d54/: namespacesourcepp_1_1math.html  namespacesourcepp_1_1math.js  structtoolpp_1_1FGD_1_1Entity_1_1FieldFlags.html  structtoolpp_1_1FGD_1_1Entity_1_1FieldFlags.js
d0/d57/: TTX_8h.html  TTX_8h.js  TTX_8h_source.html
d0/d5a/: VPK__VTMB_8h__incl.map  VPK__VTMB_8h__incl.md5  classvtfpp_1_1TTX-members.html  namespacesourcepp_1_1string.html
d0/d5b/: structvtfpp_1_1ImagePixel_1_1RGB323232F.html  structvtfpp_1_1ImagePixel_1_1RGB323232F.js
d0/d5e/: structvtfpp_1_1SHT_1_1Sequence_1_1Frame.html  structvtfpp_1_1SHT_1_1Sequence_1_1Frame.js
d0/d60/: classkvpp_1_1KV1Writer__inherit__graph.map  classkvpp_1_1KV1Writer__inherit__graph.md5  classtoolpp_1_1FGD__coll__graph.map  classtoolpp_1_1FGD__coll__graph.md5
d0/d64/: structvpkpp_1_1GCF_1_1Block-members.html
d0/d6e/: structmdlpp_1_1VTX_1_1Vertex.html  structmdlpp_1_1VTX_1_1Vertex.js  structvtfpp_1_1ImagePixel_1_1BGR888__inherit__graph.map  structvtfpp_1_1ImagePixel_1_1BGR888__inherit__graph.md5  structvtfpp_1_1ImagePixel_1_1UVWQ8888-members.html
d0/d71/: structvpkpp_1_1GCF_1_1DirectoryMapHeader-members.html
d0/d73/: classkvpp_1_1KV1ElementReadable__coll__graph.map  classkvpp_1_1KV1ElementReadable__coll__graph.md5
d0/d79/: EntityLump_8cpp__incl.map  EntityLump_8cpp__incl.md5
d0/d7d/: structbsppp_1_1BSPTextureInfo__v0__coll__graph.map  structbsppp_1_1BSPTextureInfo__v0__coll__graph.md5
d0/d80/: structbsppp_1_1BSPEdge__v0__coll__graph.map  structbsppp_1_1BSPEdge__v0__coll__graph.md5
docs/: DOXYMAINPAGE.md  index.html  index.md
ext/: _ext.cmake  update.bat  update.sh
ext/compressonator/: CMakeLists.txt
ext/compressonator/lib/win_x86_64/: CMP_Core_MD.lib  CMP_Core_MD_AVX.lib  CMP_Core_MD_AVX512.lib  CMP_Core_MD_AVX512d.lib  CMP_Core_MD_AVXd.lib  CMP_Core_MD_SSE.lib  CMP_Core_MD_SSEd.lib  CMP_Core_MDd.lib  CMP_Core_MT.lib  CMP_Core_MT_AVX.lib  CMP_Core_MT_AVX512.lib  CMP_Core_MT_AVX512d.lib  CMP_Core_MT_AVXd.lib  CMP_Core_MT_SSE.lib  CMP_Core_MT_SSEd.lib  CMP_Core_MTd.lib
ext/half/: CMakeLists.txt  ChangeLog.txt  LICENSE.txt  README.txt
ext/stb/: CMakeLists.txt
ext/stb/include/: stb_image.h  stb_image_resize.h
ext/stb/src/: stb_impl.cpp
lang/: _lang.cmake
lang/python/cfg/: CMakeLists.txt  __init__.py  pyproject.toml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+150 more)
src/: studiomodelpp.cpp
test/: Config.h  Config.h.in  Helpers.cpp  Helpers.h.in  Reader.cpp  _test.cmake  dmxpp.cpp  fgdpp.cpp  fspp.cpp  gamepp.cpp  kvpp.cpp  mdlpp.cpp  sndpp.cpp  steampp.cpp  studiomodelpp.cpp  toolpp.cpp  vcryptpp.cpp  vicepp.cpp  vmfpp.cpp  vmtpp.cpp  vpkpp.cpp  vtfpp.cpp
(+2668 files in other folders)
