[build-system]
requires = ["scikit-build-core >=0.10.7", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"


[project]
name = "sourcepp"
version = "${SOURCEPP_PYTHON_VERSION}"
authors = [{ name = "craftablescience", email = "lauralewisdev@gmail.com" }]
maintainers = [{ name = "craftablescience", email = "lauralewisdev@gmail.com" }]
description = "Several modern C++20 libraries for sanely parsing Valve formats."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

[project.urls]
"homepage" = "https://github.com/craftablescience/sourcepp"
"repository" = "https://github.com/craftablescience/sourcepp"
"issue tracker" = "https://github.com/craftablescience/sourcepp/issues"
"funding" = "https://ko-fi.com/craftablescience"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.targets = ["sourcepp_python_all"]
sdist.reproducible = true
sdist.include = ["*"]
sdist.exclude = ["cfg/*"]
wheel.py-api = "cp312"
wheel.license-files = ["LICENSE", "THIRDPARTY_LEGAL_NOTICES.txt"]
build.verbose = true
logging.level = "INFO"


[tool.cibuildwheel]
archs = ["auto64"]
build-verbosity = 1
#test-command = "pytest {project}/test"
#test-requires = "pytest"

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "14.7"
